GNOME Bugzilla – Bug 686980
seahorse --help returns "GLib-GIO-CRITICAL **: This application can not open files."
Last modified: 2013-02-19 05:56:21 UTC
Running seahorse --help in Ubuntu 12.10 in terminal fails: $ seahorse --help ** Message: init gpgme version 1.2.0 (seahorse:7998): GLib-GIO-CRITICAL **: This application can not open files. The same for seahorse -h: $ seahorse -h ** Message: init gpgme version 1.2.0 (seahorse:9090): GLib-GIO-CRITICAL **: This application can not open files. $ seahorse -v seahorse 3.6.2 GNUPG: /usr/bin/gpg (1.4.11)
So I guess we want two things here: a) Not have the CRITICAL failure, and bogus message. b) Print out useful help.
I got a backtrace of the bug:
+ Trace 231488
Created attachment 236679 [details] [review] Fix command line options parsing Enable --help command line option. Display an error message if a unknown command line option is passed to the application.
Comment on attachment 236679 [details] [review] Fix command line options parsing Thanks. Pushed.
Pushed to gnome-3-6 branch as well.