Fix command line options parsing

Enable --help command line option.
Display an error message if a unknown command line option is passed to the application.

https://bugzilla.gnome.org/show_bug.cgi?id=686980