libseahorse/seahorse-application.c
@@ -125,8 +125,6 @@ seahorse_application_local_command_line (GApplication *application,
 	g_option_context_add_main_entries (context, options, GETTEXT_PACKAGE);
 	g_option_context_set_translation_domain(context, GETTEXT_PACKAGE);
 	g_option_context_add_group (context, gtk_get_option_group (TRUE));
-	g_option_context_set_help_enabled (context, FALSE);
-	g_option_context_set_ignore_unknown_options (context, TRUE);
 
 	if (g_option_context_parse (context, &argc, arguments, &error) == FALSE) {
 		g_printerr ("seahorse: %s\n", error->message);
